GitHub API isn't letting me do my thing so here is clippy

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,3 +1,12 @@
+:root {
+    --main-bg: #fff;
+    --card-bg: #e9eaed;
+    --textColor: #333;
+    --altTextColor: #fff;
+}
+
 body{
     font-family: 'Nunito', sans-serif;
+    background-color: var(--main-bg);
+    color: var(--textColor);
 }
