--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -1,16 +1,46 @@
-.container{
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px 0;
-}
-
 header{
-    background-color: var(--card-bg);
     padding: 50px;
     border-radius: 10px;
-    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.15);
+
+    a{
+        text-decoration: none;
+        font-weight: 700;
+        font-size: 28px;
+        color: var(--accent);
+        border-bottom: 5px solid var(--textColor);
+        transition: 0.3s all ease-in-out;
+
+        &:hover{
+            border-bottom: 5px solid var(--accent);
+        }
+    }
+}
+
+.intro{
+    max-width: 600px;
+    padding-top: 50px;
+    margin-bottom: 50px;
+    
+    h1{
+        font-size: 45px;
+    }
+
+    input[type="text"]{
+        border: 0px;
+        outline: 0px;
+        border-radius: 50px;
+        height: 50px;
+        background-color: var(--card-bg);
+        padding: 0 20px;
+        font-size: 17px;
+        min-width: 250px;
+    }
 }
 
 .listPackageContainer{
+    margin: 50px 0;
+}
+
+.searchResults{
     margin: 50px 0;
 }
