--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -13,9 +13,9 @@ body{
 }
 
 .container{
-    max-width: 1200px;
+    max-width: 1300px;
     margin: 0 auto;
-    padding: 20px 0;
+    padding: 20px 50px;
 
 }
 
