--- a/src/styles/singleApp.module.scss
+++ b/src/styles/singleApp.module.scss
@@ -25,7 +25,7 @@ li{
     }
 
     p{
-        text-align: center;
+        text-align: center !important;
         font-size: 18px;
         margin: 0px;
         padding: 20px 0;
