--- a/src/styles/all.module.scss
+++ b/src/styles/all.module.scss
@@ -18,5 +18,9 @@ ul{
             margin: 0px !important;
             background-color: var(--main-bg) !important;
         }
+
+        span, .react-loading-skeleton{
+            height: 100% !important;
+        }
     }
 }
