--- a/src/styles/search.module.scss
+++ b/src/styles/search.module.scss
@@ -3,8 +3,13 @@
     padding: 0px;
     margin: 20px 0;
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     grid-gap: 15px;
     margin-top: 50px;;
 }
 
+@media(max-width: 1280px){
+   .searchResults{
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+   }
+}
