--- a/src/styles/search.module.scss
+++ b/src/styles/search.module.scss
@@ -13,3 +13,22 @@
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    }
 }
+
+@keyframes tears {
+    0% {
+        opacity: 0;
+    }
+
+    100%{
+        opacity: 1;
+    }
+}
+
+.loader{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 50px 0;
+    opacity: 0;
+    animation: tears 0.1s 0.3s forwards ease;
+} 
