--- a/src/styles/store.module.scss
+++ b/src/styles/store.module.scss
@@ -49,3 +49,11 @@ ul{
         opacity: 0.75;
     }
 }
+
+.loader{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    margin: 80px 0;
+} 
