--- a/src/styles/singleApp.module.scss
+++ b/src/styles/singleApp.module.scss
@@ -6,6 +6,7 @@ li{
     cursor: pointer;
     overflow: hidden;
     transition: 0.1s all ease-in-out;
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.15);
 
     .imgContainer{
         min-height: 80px;
@@ -63,12 +64,12 @@ li{
     }
     
     button, a{
-        padding: 5px 10px !important;
+        padding: 8px 15px !important;
         font-size: 15px !important;
         background-color: var(--main-bg) !important;
         margin-top: 15px;
         border-radius: 50px;
-        display: inline-block;
+        display: flex;
         text-decoration: none;
         color: var(--textColor);
         font-size: 18px;
@@ -77,10 +78,15 @@ li{
         cursor: pointer;
         border: 0px;
         outline: 0;
-        text-align: center;
+        text-align: left;
         display: flex;
         align-items: center;
-        justify-content: center;
+
+        svg{
+            padding-right: 10px !important;
+            margin-top: 0px !important;
+            font-size: 18px !important;
+        }
 
         &:hover{
             opacity: 0.75;
@@ -90,8 +96,6 @@ li{
 
 .controls{
     display: grid;
-    grid-gap: 10px;
-    grid-template-columns: 1fr 1fr;
 }
 
 
