--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -5,6 +5,10 @@
     --altTextColor: #fff;
     --accent: #9b2eff;
     --altAccent: #7214c9;
+
+    .sun{
+        display: none;
+    }
 }
 
 .dark {
@@ -18,6 +22,10 @@
      .react-loading-skeleton{
             background-color: #2d2f30 !important;
             background-image: linear-gradient( 90deg,#2d2f30,#272727,#2d2f30 ) !important;
+     }
+
+     .moon{
+         display: none;
      }
 }
 
@@ -93,6 +101,7 @@ input[type="text"]{
     font-size: 17px;
     min-width: 250px;
     color: var(--textColor);
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.25);
 }
 
 .box{
@@ -198,6 +207,16 @@ input[type="text"]{
             cursor: pointer;
             color: var(--textColor);
             transition: 0.3s all ease-in-out;
+            box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.18);
+            display: flex;
+            align-items: center;
+
+            svg{
+                padding-right: 10px;
+                margin-top: 0px;
+                font-size: 20px;
+            }
+
 
             &:hover{
                background-color: var(--card-bg);
@@ -220,11 +239,11 @@ input[type="text"]{
     padding: 10px 20px;
     border-radius: 50px;
     margin-top: 15px;
-    display: inline-block;
+    display: flex;
     text-decoration: none;
     color: var(--textColor);
     font-size: 18px;
-    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.18);
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.25);
     transition: 0.3s all ease-in-out;
     cursor: pointer;
     border: 0px;
@@ -232,6 +251,12 @@ input[type="text"]{
 
     &:hover, &:focus{
         opacity: 0.75;
+    }
+
+    svg{
+        padding-right: 10px;
+        margin-top: 2px;
+        font-size: 20px;
     }
 } 
 
