--- a/src/styles/nav.module.scss
+++ b/src/styles/nav.module.scss
@@ -1,15 +1,24 @@
 .nav{
     span{
-        font-size: 18px;
+        font-size: 22px;
         background-color: var(--card-bg);
-        padding: 5px 20px;
-        border-radius: 50px;
+        border-radius: 50%;
         cursor: pointer;
         user-select: none;
         transition: 0.3s all ease-in-out;
+        display: flex;
+        align-self: center;
+        justify-content: center;
+        width: 50px;
+        height: 50px;
+        box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.25);
 
         &:hover{
             opacity: 0.75;
+        }
+
+        svg{
+            padding-top: 13px;
         }
     }
 }
