--- a/src/styles/nav.module.scss
+++ b/src/styles/nav.module.scss
@@ -1,24 +1,56 @@
 .nav{
-    span{
-        font-size: 22px;
+    display: flex;
+
+    span, a{
         background-color: var(--card-bg);
-        border-radius: 50%;
         cursor: pointer;
         user-select: none;
         transition: 0.3s all ease-in-out;
         display: flex;
         align-self: center;
         justify-content: center;
-        width: 50px;
-        height: 50px;
+        border: 0px !important;
+        
         box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.25);
 
         &:hover{
             opacity: 0.75;
         }
+    }
+
+    a{
+        font-size: 20px;
+        height: 50px;
+        line-height: 50px;
+        padding: 0 20px;
+        border-radius: 50px;
+        margin-right: 15px;
+        font-weight: normal;
+        color: var(--textColor);
+        
+        svg{
+            padding-top: 15px;
+            font-size: 18px;
+            padding-right: 10px;
+        }
+
+        &:hover{
+            color: var(--textColor) !important;
+        }
+    }
+
+    span:nth-child(2){
+        margin-right: 15px;
+    }
+
+    span{
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        font-size: 22px;
 
         svg{
-            padding-top: 13px;
+            padding-top: 15px;
         }
     }
 }
