--- a/src/styles/search.module.scss
+++ b/src/styles/search.module.scss
@@ -31,3 +31,41 @@
     animation: tears 0.1s 0.3s forwards ease;
 } 
 
+
+.searchBox{
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 50px;
+    height: 50px;
+    background-color: var(--card-bg);
+    min-width: 300px;
+    display: inline-block;
+    line-height: 55px;
+
+    span{
+        padding-left: 15px;
+    }
+
+    input[type="text"]{
+        border: 0px;
+        outline: 0px;
+        background-color: transparent;
+        height: 50px;
+        padding: 0 15px;
+        font-size: 17px;
+        line-height: 50px;
+        
+        color: var(--textColor);
+        
+    }
+
+}
+
+@media(max-width: 495px){
+    .searchBox{
+        width: 100%;
+    }
+    
+    input[type=text]{
+        width: calc(100% - 65px) !important;
+    }
+}
