--- a/src/styles/search.module.scss
+++ b/src/styles/search.module.scss
@@ -36,9 +36,7 @@
 
 .loader{
     position: absolute;
-    width: 100%;
-    display: flex;
-    justify-content: center;
+    left: 50%;
     margin: 35px 0;
     opacity: 0;
     animation: tears 0.1s 0.3s forwards ease;
