These changes were created to add the scroll to top functionality in the Store page

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -31,6 +31,10 @@
 
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body{
     font-family: 'Nunito', sans-serif;
     background-color: var(--main-bg);
