Fix mobile responsiveness

--- a/src/styles/store.module.scss
+++ b/src/styles/store.module.scss
@@ -151,3 +151,13 @@ ul{
         }
     }
 }
+
+@media(max-width: 710px){
+    .pagination{
+        padding: 50px 0 !important;
+        
+        em{
+            display: none;
+        }
+    }
+}
