Fixed store, pagination, more

--- a/styles/appList.module.scss
+++ b/styles/appList.module.scss
@@ -6,4 +6,8 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 15px;
+
+    h3{
+        display: block;
+    }
 }
