--- a/styles/singleApp.module.scss
+++ b/styles/singleApp.module.scss
@@ -8,26 +8,7 @@
     transition: 0.1s all ease-in-out;
     box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.15);
 
-    .imgContainer{
-        min-height: 80px;
-        position: relative;
-        
-        img{
-            width: 80px;
-            height: auto;
-            margin: 0 auto;
-            display: block;
-            user-select: none;
-
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-    }
-
     p{
-        text-align: center !important;
         font-size: 18px;
         margin: 0px;
         padding-top: 20px;
@@ -41,15 +22,39 @@
         display: flex;
         align-items: center;
 
+        p{
+            text-align: left;
+            margin: 0px;
+            padding: 0px;
+        }
+
         img{
             user-select: none;
             width: 25px;
             height: 25px;
             display: inline-block;
-            padding-right: 5px;
+            margin-right: 10px;
             // border-radius: 50%;
         }
+        
+
+        .noIcon{
+            background-color: var(--accent);
+            width: 25px;
+            height: 25px;
+            border-radius: 50px;
+            text-align: center;
+            color: #fff;
+            font-size: 12px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-right: 10px;
+            user-select: none;
+        }
     }
+
+    
 
     h3, h4{
         margin-top: 0px;
