--- a/styles/singleApp.module.scss
+++ b/styles/singleApp.module.scss
@@ -94,6 +94,7 @@
         align-items: center;
         margin-bottom: 10px;
         outline: 0;
+        color: var(--textColor);
         cursor: pointer;
 
         &:hover{
@@ -112,7 +113,7 @@
         width: 100%;
 
         span{
-            font-size: 15px;
+            font-size: 14px;
             margin-top: 20px;
             display: block;
         }
@@ -127,7 +128,7 @@
             cursor: pointer;
             -webkit-appearance: none;
             outline: 0;
-            font-size: 16px;
+            font-size: 15px;
             font-family: 'Nunito', sans-serif;
             position: absolute;
             top: -15px;
@@ -158,7 +159,7 @@
             display: flex;
             align-items: center;
             justify-content: flex-start;
-            font-size: 16px;
+            font-size: 15px;
             cursor: pointer;
 
             &:hover{
@@ -176,7 +177,7 @@
                 width: 18px;
                 height: 18px;
                 padding-right: 10px;
-                color: var(--accent);
+                // color: var(--textColor);
             }
             
             &:last-child{
