--- a/styles/listSort.module.scss
+++ b/styles/listSort.module.scss
@@ -20,6 +20,7 @@
         box-shadow: 0px 3px 5px #00000026;
         transition: 0.3s all ease-in-out;
         -webkit-appearance: none;
+        font-family: 'Nunito', sans-serif;
 
         &:hover{
             opacity: 0.75;
