Further CSS fixes

--- a/styles/appList.module.scss
+++ b/styles/appList.module.scss
@@ -11,3 +11,15 @@
         padding-bottom: 0px;
     }
 }
+
+@media(max-width: 1300px){
+    .popularList{
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    }
+}
+
+@media(max-width: 500px){ 
+    .popularList{
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    }
+}
